force-app/main/default/objects/NPN_Community_Home_Page_Message__c/NPN_Community_Home_Page_Message__c.object-meta.xml
<CustomObject>
    <description>NPN : Home Page : NPN Community Home Page Message to display on UI</description>
    <label>NPN Community Home Page Message</label>
    <nameField>
        <displayFormat>HP-{0000}</displayFormat>
        <label>NPN Community Home Page Competency Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPN Community Home Page Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>