force-app/main/default/objects/NPN_Community_Home_Page_Message__c/fields/Portal_Groups__c.field-meta.xml
<CustomField>
    <fullName>Portal_Groups__c</fullName>
    <label>Permissions &amp; Group Assignments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Arrow Embedded Edge</fullName>
            </value>
            <value>
                <fullName>ATP</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Compute DGX Portal Full</fullName>
            </value>
            <value>
                <fullName>Compute Portal Full</fullName>
            </value>
            <value>
                <fullName>CSP Compute DGX Elite</fullName>
            </value>
            <value>
                <fullName>CSP Compute DGX Preferred</fullName>
            </value>
            <value>
                <fullName>CSP Compute Elite</fullName>
            </value>
            <value>
                <fullName>CSP Compute Preferred</fullName>
            </value>
            <value>
                <fullName>CSP GPU Virtualization Elite</fullName>
                <isActive>false</isActive>
                <label>CSP GPU Virtualization Elite</label>
            </value>
            <value>
                <fullName>CSP GPU Virtualization Preferred</fullName>
                <isActive>false</isActive>
                <label>CSP GPU Virtualization Preferred</label>
            </value>
            <value>
                <fullName>CSP Virtualization Elite</fullName>
            </value>
            <value>
                <fullName>CSP Virtualization Preferred</fullName>
            </value>
            <value>
                <fullName>CSP Visualization Elite</fullName>
            </value>
            <value>
                <fullName>CSP Visualization Preferred</fullName>
            </value>
            <value>
                <fullName>DISTI Compute DGX Elite</fullName>
            </value>
            <value>
                <fullName>DISTI Compute DGX Preferred</fullName>
            </value>
            <value>
                <fullName>DISTI Compute Elite</fullName>
            </value>
            <value>
                <fullName>DISTI Compute Preferred</fullName>
            </value>
            <value>
                <fullName>DISTI Deep Learning Elite</fullName>
                <isActive>false</isActive>
                <label>DISTI Deep Learning Elite</label>
            </value>
            <value>
                <fullName>DISTI Deep Learning Preferred</fullName>
                <isActive>false</isActive>
                <label>DISTI Deep Learning Preferred</label>
            </value>
            <value>
                <fullName>DISTI GPU Virtualization Elite</fullName>
                <isActive>false</isActive>
                <label>DISTI GPU Virtualization Elite</label>
            </value>
            <value>
                <fullName>DISTI GPU Virtualization Preferred</fullName>
                <isActive>false</isActive>
                <label>DISTI GPU Virtualization Preferred</label>
            </value>
            <value>
                <fullName>DISTI HPC Elite</fullName>
                <isActive>false</isActive>
                <label>DISTI HPC Elite</label>
            </value>
            <value>
                <fullName>DISTI HPC Preferred</fullName>
                <isActive>false</isActive>
                <label>DISTI HPC Preferred</label>
            </value>
            <value>
                <fullName>DISTI Professional Visualization Elite</fullName>
                <isActive>false</isActive>
                <label>DISTI Professional Visualization Elite</label>
            </value>
            <value>
                <fullName>DISTI Professional Visualization Preferred</fullName>
                <isActive>false</isActive>
                <label>DISTI Professional Visualization Preferred</label>
            </value>
            <value>
                <fullName>DISTI Virtualization Elite</fullName>
            </value>
            <value>
                <fullName>DISTI Virtualization Preferred</fullName>
            </value>
            <value>
                <fullName>DISTI Visualization Elite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>