force-app/main/default/objects/NPN_Community_Home_Page_Message__c/fields/Portal_Message__c.field-meta.xml
<CustomField>
    <fullName>Portal_Message__c</fullName>
    <label>Portal Message</label>
    <length>150</length>
    <type>Text</type>
</CustomField>