force-app/main/default/objects/NPN_Community_Home_Page_Message__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <length>150</length>
    <type>Text</type>
</CustomField>